--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container" style="background-color: skyblue;">
+        固定幅
+    </div>
+
+    <div class="container-fluid" style="background-color: yellow;">
+        流動幅
+    </div>
+
+    <div class="container">
+        <div class="row gx-5 justify-content-lg-center">
+            <div class="col-md-4 col-lg-4">1</div>
+            <div class="col-md-8 col-lg-4">2</div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
