シンボリックリンクを作成しました

--- a/index.html
+++ b/index.html
@@ -10,18 +10,123 @@
 </head>
 
 <body>
-    <div class="container" style="background-color: skyblue;">
+
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-md bg-primary-subtle">
+            <div class="container">
+                <a href="#" class="navbar-brand">Logo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- ↓開閉するコンテナ -->
+                <div class="collapse navbar-collapse" id="collapse">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link active">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">ブログ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">お問い合わせ</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container" style="background: skyblue;">
         固定幅
     </div>
 
-    <div class="container-fluid" style="background-color: yellow;">
+    <div class="container-fluid" style="background: yellow;">
         流動幅
     </div>
 
+
     <div class="container">
         <div class="row gx-5 justify-content-lg-center">
-            <div class="col-md-4 col-lg-4">1</div>
-            <div class="col-md-8 col-lg-4">2</div>
+            <div class="col-md-4 col-lg-4 order-1">1</div>
+            <div class="col-md-8 col-lg-4 order-0">2</div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="https://picsum.photos/id/174/600/400" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h2 class="card-title h5">ダミータイトル</h2>
+                        <p class="card-text">ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章</p>
+                        <a href="#" class="btn btn-primary btn-sm w-100">ボタンテキスト</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="https://picsum.photos/id/743/600/400" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h2 class="card-title h5">ダミータイトル</h2>
+                        <p class="card-text">ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章</p>
+                        <a href="#" class="btn btn-primary">ボタンテキスト</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="https://picsum.photos/id/842/600/400" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h2 class="card-title h5">ダミータイトル</h2>
+                        <p class="card-text">ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章</p>
+                        <a href="#" class="btn btn-primary">ボタンテキスト</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card">
+                    <img src="https://picsum.photos/id/142/600/400" alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h2 class="card-title h5">ダミータイトル</h2>
+                        <p class="card-text">ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章ダミー文章</p>
+                        <a href="#" class="btn btn-primary">ボタンテキスト</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-5">
+        <h2 class="text-center">My Profile</h2>
+        <ul class="nav nav-tabs justify-content-center" role="tablist">
+            <li class="nav-item">
+                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile"
+                    type="button">自己紹介</button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#skill" type="button">スキル</button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#works" type="button">作品集</button>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#history" type="button">経歴</button>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane show active fade" id="profile" role="tabpanel" aria-labelledby="">
+                <p>私の名前は名無し太郎です。</p>
+            </div>
+            <div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby="">
+                <p>Adobe系ソフト全般、HTML ,CSS,JavaScript</p>
+            </div>
+            <div class="tab-pane fade" id="works" role="tabpanel" aria-labelledby="">
+                <p>coming soon</p>
+            </div>
+            <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="">
+                <p>2024年6月 インタープランITスクール</p>
+            </div>
         </div>
     </div>
 
